feat(doc): add images

--- a/src/css-positioning/css-positioning.scss
+++ b/src/css-positioning/css-positioning.scss
@@ -7,7 +7,9 @@ body {
 
   main div {
     img {
-      height: 230px;
+      // height: 230px;
+      max-width: 100%;
+      display: block;
     }
 
     p > code {
